--- a/pom.xml
+++ b/pom.xml
@@ -293,6 +293,12 @@
                         </rulesets>
                     </configuration>
                 </plugin>
+                <!-- sonar plugin -->
+                <plugin>
+                   <groupId>org.sonarsource.scanner.maven</groupId>
+                   <artifactId>sonar-maven-plugin</artifactId>
+                   <version>3.0.1</version>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
