--- a/src/main/resources/egovframework/property/globals.properties
+++ b/src/main/resources/egovframework/property/globals.properties
@@ -15,11 +15,19 @@
 
 # DB\uc11c\ubc84 \ud0c0\uc785(ORACLE, MYSQL) - datasource \ubc0f sqlMap \ud30c\uc77c \uc9c0\uc815\uc5d0 \uc0ac\uc6a9\ub428
 
+
 Globals.DbType = mysql
-driverClassName=net.sf.log4jdbc.DriverSpy
-url=jdbc:log4jdbc:mysql://localhost:3306/EASYCOMPANY
-username=root
-password=
+driverClassName=org.h2.Driver
+url=jdbc:h2:file:F:/zz.project/easy/easyDB;MODE=MySQL;AUTO_SERVER=TRUE
+username=ec
+password=ec
+
+
+#Globals.DbType = mysql
+#driverClassName=net.sf.log4jdbc.DriverSpy
+#url=jdbc:log4jdbc:mysql://localhost:3306/EASYCOMPANY
+#username=root
+#password=
 
 #Globals.DbType = oracle
 #driverClassName=oracle.jdbc.driver.OracleDriver
