--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <repositories>
         <repository>
             <id>mvn2</id>
-            <url>http://repo1.maven.org/maven2/</url>
+            <url>https://repo1.maven.org/maven2/</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
