--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         </repository>
         <repository>
             <id>egovframe</id>
-            <url>http://maven.egovframe.kr:8080/maven/</url>
+            <url>http://www.egovframe.go.kr/maven/</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
