--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,16 @@
         </repository>
         <repository>
             <id>egovframe</id>
+            <url>http://maven.egovframe.kr/maven/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>egovframe</id>
             <url>http://maven.egovframe.kr:8080/maven/</url>
             <releases>
                 <enabled>true</enabled>
