--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
         </repository>
         <repository>
             <id>egovframe2</id>
-            <url>http://maven.egovframe.kr:8080/maven/</url>            
+            <url>http://www.egovframe.go.kr/maven/</url>            
             <releases>
                 <enabled>true</enabled>
             </releases>
