--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
-        <repository>
+        <!-- <repository>
             <id>egovframe</id>
             <url>http://maven.egovframe.kr:8080/maven/</url>            
             <releases>
@@ -31,7 +31,7 @@
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
-        </repository>
+        </repository> -->
     </repositories>
     <dependencies>
         <!-- 표준프레임워크 실행환경 -->
