--- a/pom.xml
+++ b/pom.xml
@@ -255,6 +255,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
+                    <artifactId>maven-resources-plugin</artifactId>
                     <version>3.8.5</version>
                     <configuration>
                         <source>1.7</source>
